--- a/src/assets/scss/custom/_variables.scss
+++ b/src/assets/scss/custom/_variables.scss
@@ -68,13 +68,13 @@ $colors: map-merge((
 ), $colors);
 
 $default:       #172b4d !default;
-$primary:       #5e72e4 !default;
+$primary:       #136c34 !default;
 $secondary:     #f4f5f7 !default;
-$success:       $green !default;
-$info:          $teal !default;
-$warning:       $orange !default;
+$success:       #4c1824 !default;
+$info:          #b178cb !default;
+$warning:       #444444 !default;
 $danger:        $red !default;
-$light:         $gray-500 !default;
+$light:         #dfafbf !default;
 $dark:          $gray-900 !default;
 $darker:        darken($gray-900, 15%) !default;
 
@@ -119,7 +119,7 @@ $brand-colors: map-merge((
 $shape-colors: () !default;
 $shape-colors: map-merge((
   "default":      #32325d,
-  "primary":      #5533ff,
+  "primary":      #136c34,
   "secondary":    #24b47e,
   "neutral":      #e9ecef,
   "blue-gray":    #b2cbe1,
