--- a/src/assets/scss/custom/_section.scss
+++ b/src/assets/scss/custom/_section.scss
@@ -1,7 +1,7 @@
 .section {
     position: relative;
-    padding-top: $spacer * 4;
-    padding-bottom: $spacer * 4;
+    padding-top: $spacer * 2;
+    padding-bottom: $spacer * 2;
 }
 
 .section-xl {
@@ -10,13 +10,13 @@
 }
 
 .section-lg {
-    padding-top: $spacer * 6;
-    padding-bottom: $spacer * 6;
+    padding-top: $spacer * 2;
+    padding-bottom: $spacer * 2;
 }
 
 .section-sm {
-    padding-top: $spacer * 2;
-    padding-bottom: $spacer * 2;
+    padding-top: $spacer ;
+    padding-bottom: $spacer ;
 }
 
 // Hero sections
@@ -65,7 +65,7 @@
             }
 
             + .shape-container {
-                padding-top: 18rem;
+                padding-top: 1rem;
                 padding-bottom: 19rem;
             }
         }
